--- a/Python/code-part-8.ipynb
+++ b/Python/code-part-8.ipynb
@@ -171,6 +171,42 @@
     "            return (dfs(start, fuel) + 1) % mod\n",
     "        return dfs(start, fuel)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from heapq import heapify, heappop, heappush\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def totalCost(self, costs: List[int], k: int, candidates: int) -> int:\n",
+    "        pq = []\n",
+    "        for i in range(candidates):\n",
+    "            pq.append((costs[i], 0))\n",
+    "        for i in range(max(candidates, len(costs) - candidates), len(costs)):\n",
+    "            pq.append((costs[i], 1))\n",
+    "\n",
+    "        heapify(pq)\n",
+    "        \n",
+    "        answer = 0\n",
+    "        next_head, next_tail = candidates, len(costs) - 1 - candidates \n",
+    "\n",
+    "        for _ in range(k): \n",
+    "            cur_cost, cur_section_id = heappop(pq)\n",
+    "            answer += cur_cost\n",
+    "            if next_head <= next_tail: \n",
+    "                if cur_section_id == 0:\n",
+    "                    heappush(pq, (costs[next_head], 0))\n",
+    "                    next_head += 1\n",
+    "                else:\n",
+    "                    heappush(pq, (costs[next_tail], 1))\n",
+    "                    next_tail -= 1\n",
+    "                    \n",
+    "        return answer\n"
+   ]
   }
  ],
  "metadata": {
