--- a/Python/code-part-8.ipynb
+++ b/Python/code-part-8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 500 ms\n",
-      "Wall time: 524 ms\n"
+      "CPU times: total: 438 ms\n",
+      "Wall time: 482 ms\n"
      ]
     },
     {
@@ -70,7 +70,7 @@
        "10"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.2988903522491455\n",
+      "1.577779769897461\n",
       "300\n"
      ]
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,22 +190,84 @@
     "            pq.append((costs[i], 1))\n",
     "\n",
     "        heapify(pq)\n",
-    "        \n",
-    "        answer = 0\n",
-    "        next_head, next_tail = candidates, len(costs) - 1 - candidates \n",
     "\n",
-    "        for _ in range(k): \n",
+    "        answer = 0\n",
+    "        next_head, next_tail = candidates, len(costs) - 1 - candidates\n",
+    "\n",
+    "        for _ in range(k):\n",
     "            cur_cost, cur_section_id = heappop(pq)\n",
     "            answer += cur_cost\n",
-    "            if next_head <= next_tail: \n",
+    "            if next_head <= next_tail:\n",
     "                if cur_section_id == 0:\n",
     "                    heappush(pq, (costs[next_head], 0))\n",
     "                    next_head += 1\n",
     "                else:\n",
     "                    heappush(pq, (costs[next_tail], 1))\n",
     "                    next_tail -= 1\n",
-    "                    \n",
+    "\n",
     "        return answer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProbability(self, n: int, edges: List[List[int]], succProb: List[float], start: int, end: int) -> float:\n",
+    "        adj = defaultdict(list)\n",
+    "        for i in range(len(edges)):\n",
+    "            adj[edges[i][0]].append((edges[i][1], succProb[i]))\n",
+    "            adj[edges[i][1]].append((edges[i][0], succProb[i]))\n",
+    "        visited = [False] * n\n",
+    "        visited[start] = True\n",
+    "        prob = [0] * n\n",
+    "        prob[start] = 1\n",
+    "        pq = [(0, start)]\n",
+    "        while pq:\n",
+    "            _, node = heappop(pq)\n",
+    "            if visited[node]:\n",
+    "                continue\n",
+    "            visited[node] = True\n",
+    "            for neighbor, p in adj[node]:\n",
+    "                if prob[node] * p > prob[neighbor]:\n",
+    "                    prob[neighbor] = prob[node] * p\n",
+    "                    heappush(pq, (prob[neighbor], neighbor))\n",
+    "        return prob[end]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def kthFactor(self, n: int, k: int) -> int:\n",
+    "        factors = []\n",
+    "        for i in range(1, int(n**0.5) + 1):\n",
+    "            if n % i == 0:\n",
+    "                factors.append(i)\n",
+    "        x = len(factors)\n",
+    "        if k>2*x:\n",
+    "            return -1\n",
+    "        if k<=x:\n",
+    "            return factors[k-1]\n",
+    "        return n//factors[x-k]\n",
+    "s = Solution()\n",
+    "s.kthFactor(100)"
    ]
   }
  ],
