--- a/Python/code-part-8.ipynb
+++ b/Python/code-part-8.ipynb
@@ -269,6 +269,62 @@
     "s = Solution()\n",
     "s.kthFactor(100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict, deque\n",
+    "\n",
+    "class Solution:\n",
+    "    def shortestPathAllKeys(self, grid: List[str]) -> int:\n",
+    "        rows, cols = len(grid), len(grid[0])\n",
+    "        queue = deque()\n",
+    "        visited = defaultdict(set)\n",
+    "        keys_set, locks_set = set(), set()\n",
+    "        all_keys = 0\n",
+    "        start_row, start_col = -1, -1\n",
+    "        \n",
+    "        for i in range(rows):\n",
+    "            for j in range(cols):\n",
+    "                cell = grid[i][j]\n",
+    "                if cell in 'abcdef':\n",
+    "                    all_keys += (1 << (ord(cell) - ord('a')))\n",
+    "                    keys_set.add(cell)\n",
+    "                if cell in 'ABCDEF':\n",
+    "                    locks_set.add(cell)\n",
+    "                if cell == \"@\":\n",
+    "                    start_row, start_col = i, j\n",
+    "        \n",
+    "        queue.append((start_row, start_col, 0, 0))\n",
+    "        visited[0].add((start_row, start_col))\n",
+    "        \n",
+    "        while queue:\n",
+    "            cur_row, cur_col, keys, dist = queue.popleft()\n",
+    "            for dr, dc in ((0, 1), (1, 0), (-1, 0), (0, -1)):\n",
+    "                new_row, new_col = cur_row + dr, cur_col + dc\n",
+    "                \n",
+    "                if 0 <= new_row < rows and 0 <= new_col < cols and grid[new_row][new_col] != '#':\n",
+    "                    cell = grid[new_row][new_col]\n",
+    "                    \n",
+    "                    if cell in keys_set and not ((1 << (ord(cell) - ord('a'))) & keys):\n",
+    "                        new_keys = (keys | (1 << (ord(cell) - ord('a'))))\n",
+    "                        if new_keys == all_keys:\n",
+    "                            return dist + 1\n",
+    "                        visited[new_keys].add((new_row, new_col))\n",
+    "                        queue.append((new_row, new_col, new_keys, dist + 1))\n",
+    "                      \n",
+    "                    elif cell in locks_set and not (keys & (1 << (ord(cell) - ord('A')))):\n",
+    "                        continue\n",
+    "                        \n",
+    "                    elif (new_row, new_col) not in visited[keys]:\n",
+    "                        visited[keys].add((new_row, new_col))\n",
+    "                        queue.append((new_row, new_col, keys, dist + 1))\n",
+    "            \n",
+    "        return -1\n"
+   ]
   }
  ],
  "metadata": {
