--- a/Python/code-part-8.ipynb
+++ b/Python/code-part-8.ipynb
@@ -325,6 +325,79 @@
     "            \n",
     "        return -1\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a class for Disjoint Set Union (DSU)\n",
+    "class DSU:\n",
+    "    # Initialize the DSU with a list of roots and a list of sizes\n",
+    "    def __init__(self, n):\n",
+    "        self.root = list(range(n))\n",
+    "        self.size = [1] * n\n",
+    "\n",
+    "    # Find the root of a given element\n",
+    "    def find(self, x):\n",
+    "        if self.root[x] != x:\n",
+    "            self.root[x] = self.find(self.root[x])\n",
+    "        return self.root[x]\n",
+    "\n",
+    "    # Union two elements\n",
+    "    def union(self, x, y):\n",
+    "        # Find the roots of the two elements\n",
+    "        root_x = self.find(x)\n",
+    "        root_y = self.find(y)\n",
+    "        # If the roots are the same, the elements are already in the same set\n",
+    "        if root_x == root_y:\n",
+    "            return\n",
+    "        # Otherwise, merge the smaller set into the larger set\n",
+    "        if self.size[root_x] > self.size[root_y]:\n",
+    "            root_x, root_y = root_y, root_x\n",
+    "        self.root[root_x] = root_y\n",
+    "        self.size[root_y] = self.size[root_x]\n",
+    "\n",
+    "# Define a class for the solution\n",
+    "class Solution:\n",
+    "    # Define a function to find the latest day to cross\n",
+    "    def latestDayToCross(self, row: int, col: int, cells: List[List[int]]) -> int:\n",
+    "        # Initialize a DSU with row * col + 2 elements\n",
+    "        dsu = DSU(row * col + 2)\n",
+    "        # Initialize a grid with zeros\n",
+    "        grid = [[0] * col for _ in range(row)]\n",
+    "        # Define the eight possible directions to move in\n",
+    "        directions = [(0, 1), (0, -1), (1, 0), (-1, 0), (1, 1), (1, -1), (-1, 1), (-1, -1)]\n",
+    "\n",
+    "        # Iterate over each cell\n",
+    "        for i in range(row * col):\n",
+    "            # Get the row and column of the cell\n",
+    "            r, c = cells[i][0] - 1, cells[i][1] - 1\n",
+    "            # Mark the cell as occupied\n",
+    "            grid[r][c] = 1\n",
+    "            # Get the index of the cell in the DSU\n",
+    "            index_1 = r * col + c + 1\n",
+    "            # Iterate over each direction\n",
+    "            for dr, dc in directions:\n",
+    "                # Get the row and column of the neighboring cell\n",
+    "                new_r, new_c = r + dr, c + dc\n",
+    "                # Get the index of the neighboring cell in the DSU\n",
+    "                index_2 = new_r * col + new_c + 1\n",
+    "                # If the neighboring cell is occupied, union the two cells in the DSU\n",
+    "                if 0 <= new_r < row and 0 <= new_c < col and grid[new_r][new_c] == 1:\n",
+    "                    dsu.union(index_1, index_2)\n",
+    "                    \n",
+    "            # If the cell is on the left edge, union it with the \"start\" element in the DSU\n",
+    "            if c == 0:\n",
+    "                dsu.union(0, index_1)\n",
+    "            # If the cell is on the right edge, union it with the \"end\" element in the DSU\n",
+    "            if c == col - 1:\n",
+    "                dsu.union(row * col + 1, index_1)\n",
+    "            # If the \"start\" and \"end\" elements are in the same set, we can cross the river\n",
+    "            if dsu.find(0) == dsu.find(row * col + 1):\n",
+    "                return i"
+   ]
   }
  ],
  "metadata": {
