dùng công thức :v

--- a/Python/code-part-9.ipynb
+++ b/Python/code-part-9.ipynb
@@ -10,12 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cookies = [8,15,10,20,8]\n",
-    "k = 2\n"
+    "from typing import List"
    ]
   },
   {
@@ -64,6 +63,76 @@
     "        \n",
     "        # Call the dfs function with the first cookie and the number of jars\n",
     "        return dfs(0, jars)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def __init__(self):\n",
+    "        self.max_requests = 0\n",
+    "\n",
+    "    def helper(self, start, requests, indegrees, n, count):\n",
+    "        if start == len(requests):\n",
+    "            for i in range(n):\n",
+    "                if indegrees[i] != 0:\n",
+    "                    return\n",
+    "            self.max_requests = max(self.max_requests, count)\n",
+    "            return\n",
+    "\n",
+    "        # Take \n",
+    "        indegrees[requests[start][0]] -= 1\n",
+    "        indegrees[requests[start][1]] += 1\n",
+    "        self.helper(start + 1, requests, indegrees, n, count + 1)\n",
+    "\n",
+    "        # Not-take\n",
+    "        indegrees[requests[start][0]] += 1\n",
+    "        indegrees[requests[start][1]] -= 1\n",
+    "        self.helper(start + 1, requests, indegrees, n, count)\n",
+    "\n",
+    "    def maximumRequests(self, n, requests):\n",
+    "        indegrees = [0] * n\n",
+    "        self.helper(0, requests, indegrees, n, 0)\n",
+    "        return self.max_requests\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def maximumRequests(self, n: int, requests: List[List[int]]) -> int:\n",
+    "        ans = 0\n",
+    "        for i in range(1 << len(requests)):\n",
+    "            deg_in = {}\n",
+    "            deg_out = {}\n",
+    "            for u, v in enumerate(requests):\n",
+    "                if i & (1 << u):\n",
+    "                    deg_out[v[0]] = deg_out.get(v[0], 0) + 1\n",
+    "                    deg_in[v[1]] = deg_in.get(v[1], 0) + 1\n",
+    "            if deg_in == deg_out:\n",
+    "                ans = max(ans, bin(i).count('1'))\n",
+    "        return ans\n",
+    "\n",
+    "\n",
+    "n = 6\n",
+    "requests = [[5, 1], [1, 3], [5, 1], [1, 0], [4, 2], [3, 5], [0, 2],\n",
+    "            [1, 0], [2, 0], [3, 5], [4, 1], [4, 5], [1, 0], [4, 3], [3, 2]]\n",
+    "print(Solution().maximumRequests(n, requests))\n",
+    "# any( i*j>100 for i,j in requests)"
    ]
   }
  ],
