--- a/Python/code-part-9.ipynb
+++ b/Python/code-part-9.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n"
+    "from typing import List"
    ]
   },
   {
