--- a/Python/code-part-9.ipynb
+++ b/Python/code-part-9.ipynb
@@ -254,6 +254,51 @@
     "\n",
     "        \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2024. Maximize the Confusion of an Exam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bisect import bisect_left\n",
+    "\n",
+    "class Solution:\n",
+    "    def maxConsecutiveAnswers(self, answerKey: str, k: int) -> int:\n",
+    "        n = len(answerKey)\n",
+    "        t, f = [0]*n, [0]*n\n",
+    "        for i, key in enumerate(answerKey):\n",
+    "            t[i] = t[i-1] + (key == 'T')\n",
+    "            f[i] = f[i-1] + (key == 'F')\n",
+    "        ans = 0\n",
+    "        for i in range(n):\n",
+    "            true = i - bisect_left(t, t[i]-k) if t[i] > k else i+1\n",
+    "            false = i - bisect_left(f, f[i]-k) if f[i] > k else i+1\n",
+    "            ans = max(ans, true, false)\n",
+    "        return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def putMarbles(self, weights: list[int], k: int) -> int:\n",
+    "        # Collect and sort the value of all n - 1 pairs.\n",
+    "        pair_weights = sorted([weights[i] + weights[i + 1] for i in range(len(weights) - 1)])\n",
+    "        \n",
+    "        # Get the difference between the largest k - 1 values and the smallest k - 1 values.\n",
+    "        return sum(pair_weights[-(k-1):]) - sum(pair_weights[:k-1])\n"
+   ]
   }
  ],
  "metadata": {
