--- a/Python/coding.ipynb
+++ b/Python/coding.ipynb
@@ -308,6 +308,28 @@
     "# Ice cream chillin'\n",
     "# Lisa Jisoo Jennie Rosé\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import multiprocessing\n",
+    "\n",
+    "multiprocessing.cpu_count()"
+   ]
   }
  ],
  "metadata": {
