--- a/Python/code-part-9.ipynb
+++ b/Python/code-part-9.ipynb
@@ -296,8 +296,167 @@
     "        # Collect and sort the value of all n - 1 pairs.\n",
     "        pair_weights = sorted([weights[i] + weights[i + 1] for i in range(len(weights) - 1)])\n",
     "        \n",
-    "        # Get the difference between the largest k - 1 values and the smallest k - 1 values.\n",
+    "        # Get the treeerence between the largest k - 1 values and the smallest k - 1 values.\n",
     "        return sum(pair_weights[-(k-1):]) - sum(pair_weights[:k-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fendwick tree\n",
+    "# class FenwickTree:\n",
+    "#     def __init__(self, nums: list[int]):\n",
+    "#         self.nums = nums\n",
+    "#         self.n = len(nums)\n",
+    "#         self.tree = [0] * (self.n + 1)\n",
+    "#         for i, num in enumerate(nums):\n",
+    "#             self.update(i, num)\n",
+    "\n",
+    "#     def update(self, index: int, val: int) -> None:\n",
+    "#         index += 1\n",
+    "#         while index <= self.n:\n",
+    "#             self.tree[index] += val\n",
+    "#             index += index & (-index)\n",
+    "        \n",
+    "    \n",
+    "#     def get(self, index: int) -> int:\n",
+    "#         index += 1\n",
+    "#         ans = 0\n",
+    "#         while index > 0:\n",
+    "#             ans += self.tree[index]\n",
+    "#             index -= index & (-index)\n",
+    "#         return ans\n",
+    "\n",
+    "l = [5,1,2,8,5,9,3,5]\n",
+    "diff = [l[i]-l[i-1] for i in range(len(l))]\n",
+    "diff[0] = l[0]\n",
+    "# s = FenwickTree(diff)\n",
+    "s.get(5)\n",
+    "s.update(7,5)\n",
+    "s.update(8,-5)\n",
+    "for i in range(len(l)):\n",
+    "    print(s.get(i), end=' ')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.stdin = open('test.inp', 'r')\n",
+    "sys.stdout = open('test.out', 'w')\n",
+    "input = sys.stdin.readline\n",
+    "out = sys.stdout.write\n",
+    "\n",
+    "\n",
+    "class FenwickTree:\n",
+    "    def __init__(self, nums):\n",
+    "        self.nums = nums\n",
+    "        self.n = len(nums)\n",
+    "        self.tree = [0j] * (self.n + 1)\n",
+    "        for i, num in enumerate(nums):\n",
+    "            self.update(i, num)\n",
+    "\n",
+    "    def update(self, index: int, val) -> None:\n",
+    "        index += 1\n",
+    "        while index <= self.n:\n",
+    "            self.tree[index] += val\n",
+    "            index += index & (-index)\n",
+    "\n",
+    "    def get(self, index: int):\n",
+    "        index += 1\n",
+    "        ans = 0\n",
+    "        while index > 0:\n",
+    "            ans += self.tree[index]\n",
+    "            index -= index & (-index)\n",
+    "        return ans\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "n, q = map(int, input().split())\n",
+    "direction = {'N': 1j, 'S': -1j, 'E': 1, 'W': -1}\n",
+    "s = list(map(lambda x: direction[x], input().strip()))\n",
+    "dif = [0] * n\n",
+    "move = {1j: 0, -1j: 2, 1: 1, -1: 3}\n",
+    "dir = ['N', 'E', 'S', 'W']\n",
+    "dif[0] = s[0]\n",
+    "for i in range(1, n):\n",
+    "    dif[i] = s[i] - s[i-1]\n",
+    "\n",
+    "sumD = 0\n",
+    "for i, num in enumerate(dif):\n",
+    "    sumD += num * (n-i)\n",
+    "fwt = FenwickTree(dif)\n",
+    "for _ in range(q):\n",
+    "    query = input().split()\n",
+    "    if query[0] == '1':\n",
+    "        new = direction[query[2]]\n",
+    "        pos = int(query[1]) - 1\n",
+    "\n",
+    "        # print(new,fwt.getSum(pos),new - fwt.getSum(pos))\n",
+    "\n",
+    "        # Kí tự hiện tại\n",
+    "        curr = fwt.get(pos)\n",
+    "        # sumD += (new - curr)\n",
+    "        for i in range(n):\n",
+    "            print(fwt.get(i), end=' ')\n",
+    "        print()\n",
+    "        print(fwt.tree, curr, new)\n",
+    "        fwt.update(pos,new - curr)\n",
+    "        fwt.update(pos,curr - new)\n",
+    "        print(fwt.tree,fwt.get(pos))\n",
+    "        for i in range(n):\n",
+    "            print(fwt.get(i), end=' ')\n",
+    "        break\n",
+    "        # print()\n",
+    "        # fwt.update(pos, new - curr)\n",
+    "        # fwt.tree[pos] += new - curr\n",
+    "        # fwt.update(pos + (pos & (-pos)) -1 , curr - new)\n",
+    "        # print(pos + (pos & (-pos)))\n",
+    "        # print(fwt.tree, fwt.getSum(pos-1), 'sumD = ', sumD)\n",
+    "        # for i in range(n):\n",
+    "        #     print(fwt.getSum(i), end=' ')\n",
+    "        # print(curr,new,new - curr)\n",
+    "        # break\n",
+    "        # sumD += (new - curr)\n",
+    "        # print(sumD)\n",
+    "        # else:\n",
+    "        # fwt.diff[pos] = new\n",
+    "        # if pos < n-1:\n",
+    "        #     sumD = sumD - fwt.diff[pos+1] * \\\n",
+    "        #         (n-pos-1) + fwt.diff[pos+1] * (n-pos-1)\n",
+    "\n",
+    "        #     fwt.update(pos+1,fwt.getSum(pos+1) - new)\n",
+    "        # sumD += fwt.diff[pos] * (n-pos)\n",
+    "        # print(query, fwt.tree, sumD)\n",
+    "        # break\n",
+    "    # else:\n",
+    "    #     left, right, k = map(int, query[1:])\n",
+    "    #     if k % 4 == 0:\n",
+    "    #         if sumD == 0:\n",
+    "    #             pass\n",
+    "    #     else:\n",
+    "    #         newleft = direction[dir[(move[fwt.getSum(left-1)]+k) % 4]]\n",
+    "    #         newright = direction[dir[(move[fwt.getSum(right-1)]+k) % 4]]\n",
+    "    #         sumD += (newleft - fwt.getSum(left-2)) * (n-left+1)\n",
+    "    #         sumD += (newright - fwt.getSum(right-2)) * (n-right+1)\n",
+    "\n",
+    "    #         print(left, right, k, newleft, newright, sumD)\n",
+    "# print('-'*20)\n",
+    "# print(s)\n",
+    "# print(tree)\n",
+    "# print(sumD)\n",
+    "# print(curr)\n",
+    "# print(fwt.tree)\n",
+    "# print(fwt.getSum(0))\n",
+    "# for i in range(n):\n",
+    "#     print(fwt.getSum(i),end=' ')\n"
    ]
   }
  ],
