--- a/Python/code-tour-test.ipynb
+++ b/Python/code-tour-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +101,63 @@
     "# print(fwt.getSum(0))\n",
     "# for i in range(n):\n",
     "#     print(fwt.getSum(i),end=' ')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5707963267948966"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find angle between 2 complex number\n",
+    "import math\n",
+    "def angle(a, b):\n",
+    "    return math.atan2(a.imag, a.real) - math.atan2(b.imag, b.real)\n",
+    "\n",
+    "angle(1j, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s =\"NNWWEESS\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7, 5, 4, 8, 1, 6, 9, 3, 2])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "np.random.shuffle(x)\n",
+    "x\n"
    ]
   }
  ],
