--- a/Python/code-tour-test.ipynb
+++ b/Python/code-tour-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "    def __init__(self, nums):\n",
     "        self.nums = nums\n",
     "        self.n = len(nums)\n",
-    "        self.tree = [0j] * (self.n + 1)\n",
+    "        self.tree = [0] * (self.n + 1)\n",
     "        for i, num in enumerate(nums):\n",
     "            self.update(i, num)\n",
     "\n",
@@ -27,7 +27,7 @@
     "            self.tree[index] += val\n",
     "            index += index & (-index)\n",
     "\n",
-    "    def get(self, index: int):\n",
+    "    def get(self, index: int) -> int:\n",
     "        index += 1\n",
     "        ans = 0\n",
     "        while index > 0:\n",
@@ -38,60 +38,111 @@
     "\n",
     "n, q = map(int, input().split())\n",
     "direction = {'N': 1j, 'S': -1j, 'E': 1, 'W': -1}\n",
-    "s = list(map(lambda x: direction[x], input().strip()))\n",
+    "angle = {'N': 0, 'S': 2, 'E': 1, 'W': 3}\n",
+    "angle_to_complex = {0: 1j, 1: 1, 2: -1j, 3: -1}\n",
+    "# s = list(map(lambda x: direction[x], input().strip()))\n",
+    "s = input().strip()\n",
     "dif = [0] * n\n",
     "move = {1j: 0, -1j: 2, 1: 1, -1: 3}\n",
     "dir = ['N', 'E', 'S', 'W']\n",
-    "dif[0] = s[0]\n",
+    "dif[0] = angle[s[0]]\n",
     "for i in range(1, n):\n",
-    "    dif[i] = s[i] - s[i-1]\n",
-    "\n",
+    "    dif[i] = angle[s[i]] - angle[s[i-1]]\n",
+    "print(dif)\n",
+    "# sumD bằng tổng các số phức\n",
     "sumD = 0\n",
     "count = 0\n",
-    "for i, num in enumerate(dif):\n",
-    "    sumD += num * (n-i)\n",
+    "for i in s:\n",
+    "    sumD += direction[i]\n",
     "fwt = FenwickTree(dif)\n",
-    "for _ in range(q):\n",
-    "    query = input().split()\n",
-    "    if query[0] == '1':\n",
-    "        pos = int(query[1]) - 1\n",
-    "        diff = direction[query[2]] - fwt.get(pos)\n",
-    "        sumD += diff\n",
-    "        fwt.update(pos, diff)\n",
-    "        fwt.update(pos+1, -diff)\n",
+    "x = angle_to_complex[fwt.get(1) % 4] - angle_to_complex[fwt.get(0) % 4]\n",
+    "y = angle_to_complex[fwt.get(4) % 4] - angle_to_complex[fwt.get(3) % 4]\n",
+    "# print(y)\n",
     "\n",
-    "        for i in range(n):\n",
-    "            print(dir[move[fwt.get(i)]], end=' ')\n",
-    "        print('\\n Step: ',sumD)\n",
-    "        # break\n",
-    "        count += (sumD == 0)\n",
-    "    else:\n",
-    "        left, right, k = map(int, query[1:])\n",
-    "        if k % 4 == 0:\n",
-    "            count += (sumD == 0)\n",
-    "        else:\n",
-    "            left -= 1\n",
-    "            right -= 1\n",
-    "            newleft = direction[dir[(move[fwt.get(left)]+k) % 4]]\n",
-    "            newright = direction[dir[(move[fwt.get(right)]+k) % 4]]\n",
+    "sio = [0] * n\n",
+    "# for i in range(1, n):\n",
+    "#     sio[i] = angle_to_complex[fwt.get(\n",
+    "#         i) % 4] - angle_to_complex[fwt.get(i-1) % 4]\n",
+    "# sio[0] = angle_to_complex[fwt.get(0) % 4]\n",
+    "# print(sio)\n",
+    "for i in range(1, n):\n",
+    "    sio[i] = fwt.get(i) - fwt.get(i-1)\n",
+    "sio[0] = fwt.get(0)\n",
+    "print(sio)\n",
+    "lui = 0\n",
+    "for i, num in enumerate(sio):\n",
+    "    lui += num * (n-i)\n",
+    "print(lui)\n",
+    "fwt.update(1, 1)\n",
+    "fwt.update(4, -1)\n",
+    "# for i in range(n):\n",
+    "#     print(angle_to_complex[fwt.get(i) % 4], end=' ')\n",
+    "print('\\n', sumD)\n",
     "\n",
-    "            diff = newleft - fwt.get(left)\n",
-    "            di = newright - fwt.get(right)\n",
+    "# sumD= sumD - x*(n-1) + y*(n-4)\n",
+    "print(x, y)\n",
+    "# sio = [0] * n\n",
+    "# for i in range(1, n):\n",
+    "#     sio[i] = angle_to_complex[fwt.get(\n",
+    "#         i) % 4] - angle_to_complex[fwt.get(i-1) % 4]\n",
+    "# sio[0] = angle_to_complex[fwt.get(0) % 4]\n",
+    "# print(sio)\n",
+    "for i in range(1, n):\n",
+    "    print(fwt.get(\n",
+    "        i) - fwt.get(i-1), end=' ')\n",
+    "# lui = 0\n",
+    "# for i, num in enumerate(sio):\n",
+    "#     lui += num * (n-i)\n",
+    "# print(lui)\n",
+    "# lui = 0\n",
+    "# for i in range(1,n):\n",
+    "#     x = angle_to_complex[fwt.get(i) % 4] - angle_to_complex[fwt.get(i-1) % 4]\n",
+    "#     print(x, end=' ')\n",
+    "#     lui += x*(n-i)\n",
+    "# print('\\n', lui)\n",
+    "# print(x, angle_to_complex[fwt.get(1) % 4] - angle_to_complex[fwt.get(0) % 4]-x)\n",
+    "# print(y, angle_to_complex[fwt.get(4) % 4] - angle_to_complex[fwt.get(3) % 4]-y)\n",
+    "# for _ in range(q):\n",
+    "#     query = input().split()\n",
+    "# if query[0] == '1':\n",
+    "#     pos = int(query[1]) - 1\n",
+    "#     diff = direction[query[2]] - fwt.get(pos)\n",
+    "#     sumD += diff\n",
+    "#     fwt.update(pos, diff)\n",
+    "#     fwt.update(pos+1, -diff)\n",
     "\n",
-    "            print(diff, di)\n",
+    "#     for i in range(n):\n",
+    "#         print(dir[move[fwt.get(i)]], end=' ')\n",
+    "#     print('\\n Step: ',sumD)\n",
+    "#     # break\n",
+    "#     count += (sumD == 0)\n",
+    "# else:\n",
+    "#     left, right, k = map(int, query[1:])\n",
+    "#     if k % 4 == 0:\n",
+    "#         count += (sumD == 0)\n",
+    "#     else:\n",
+    "#         left -= 1\n",
+    "#         right -= 1\n",
+    "#         newleft = direction[dir[(move[fwt.get(left)]+k) % 4]]\n",
+    "#         newright = direction[dir[(move[fwt.get(right)]+k) % 4]]\n",
     "\n",
-    "            # fwt.update(left, diff)\n",
-    "            # fwt.update(right+1, -diff)\n",
+    "#         diff = newleft - fwt.get(left)\n",
+    "#         di = newright - fwt.get(right)\n",
     "\n",
-    "            # sumD += diff * (right-left+1)\n",
+    "#         print(diff, di)\n",
     "\n",
-    "            # for i in range(n):\n",
-    "            #     # print(dir[move[fwt.get(i)]], end=' ')\n",
-    "            #     print(fwt.get(i), end=' ')\n",
+    "#         # fwt.update(left, diff)\n",
+    "#         # fwt.update(right+1, -diff)\n",
     "\n",
-    "            # print('\\n Step: ', sumD)\n",
-    "            break\n",
-    "            # print(left, right, k, newleft, newright, sumD)\n",
+    "#         # sumD += diff * (right-left+1)\n",
+    "\n",
+    "#         # for i in range(n):\n",
+    "#         #     # print(dir[move[fwt.get(i)]], end=' ')\n",
+    "#         #     print(fwt.get(i), end=' ')\n",
+    "\n",
+    "#         # print('\\n Step: ', sumD)\n",
+    "#         break\n",
+    "# print(left, right, k, newleft, newright, sumD)\n",
     "# print('-'*20)\n",
     "# print(s)\n",
     "# print(tree)\n",
@@ -105,59 +156,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.5707963267948966"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# find angle between 2 complex number\n",
-    "import math\n",
-    "def angle(a, b):\n",
-    "    return math.atan2(a.imag, a.real) - math.atan2(b.imag, b.real)\n",
-    "\n",
-    "angle(1j, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s =\"NNWWEESS\""
+    "import sys\n",
+    "sys.stdin = open('test.inp', 'r')\n",
+    "sys.stdout = open('test.out', 'w')\n",
+    "input = sys.stdin.readline\n",
+    "out = sys.stdout.write\n",
+    "\n",
+    "n, q = map(int, input().split())\n",
+    "angle = {'N': 0, 'S': 2, 'E': 1, 'W': 3}\n",
+    "s = input().strip()\n",
+    "dir = ['N', 'E', 'S', 'W']\n",
+    "count = [s.count(dir[i]) for i in range(4)]\n",
+    "ans = 0\n",
+    "for _ in range(q):\n",
+    "    query = input().split()\n",
+    "    if query[0] == '1':\n",
+    "        pos = int(query[1]) - 1\n",
+    "        count[angle[s[pos]]] -= 1\n",
+    "        s = s[:pos] + query[2] + s[pos+1:]\n",
+    "        count[angle[query[2]]] += 1\n",
+    "    else:\n",
+    "        left, right, k = map(int, query[1:])\n",
+    "        if k % 4 != 0:\n",
+    "            left -= 1\n",
+    "            new = ''\n",
+    "            for i in range(left, right):\n",
+    "                count[angle[s[i]]] -= 1\n",
+    "                new += dir[(angle[s[i]]+k) % 4]\n",
+    "                count[angle[new[-1]]] += 1\n",
+    "            s = s[:left] + new + s[right:]\n",
+    "    if count[0] == count[2] and count[1] == count[3]:\n",
+    "        ans += 1\n",
+    "print(ans)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([7, 5, 4, 8, 1, 6, 9, 3, 2])"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "x = np.array([1,2,3,4,5,6,7,8,9])\n",
-    "np.random.shuffle(x)\n",
-    "x\n"
+    "import sys\n",
+    "from collections import defaultdict\n",
+    "input = sys.stdin.readline\n",
+    "out = sys.stdout.write\n",
+    "t = int(input())\n",
+    "for _ in range(t):\n",
+    "    s = input().strip()\n",
+    "    d = defaultdict(int)\n",
+    "    ans = 0\n",
+    "    for i,c in enumerate(s):\n",
+    "        if d[c]>0:\n",
+    "            ans = max(ans, d[c])\n",
+    "        d[c] = i+1\n",
+    "    out(str(ans)+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import product\n",
+    "import sys\n",
+    "sys.stdin = open('test.inp', 'r')\n",
+    "sys.stdout = open('test.out', 'w')\n",
+    "input = sys.stdin.readline\n",
+    "out = sys.stdout.write\n",
+    "\n",
+    "\n",
+    "def checkRightBracket(s):\n",
+    "    stack = []\n",
+    "    for i in s:\n",
+    "        if i == '(':\n",
+    "            stack.append(i)\n",
+    "        else:\n",
+    "            if len(stack) == 0:\n",
+    "                return False\n",
+    "            stack.pop()\n",
+    "    return len(stack) == 0\n",
+    "\n",
+    "\n",
+    "n, q = map(int, input().split())\n",
+    "x = list(product('()', repeat=n))\n",
+    "if n % 2 == 1:\n",
+    "    out(''.join(x[q-1]))\n",
+    "else:\n",
+    "    for i, s in enumerate(x):\n",
+    "        if not checkRightBracket(s):\n",
+    "            q -= 1\n",
+    "            if q == 0:\n",
+    "                out(''.join(s))\n",
+    "                break\n"
    ]
   }
  ],
