--- a/Python/nestquant.ipynb
+++ b/Python/nestquant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_data = pd.read_parquet('../datasets/BTCUSDT/')\n",
-    "labels = pd.read_parquet('../datasets/LABEL_BTCUSDT/')\n",
+    "training_data = pd.read_parquet(\"../datasets/BTCUSDT/\")\n",
+    "labels = pd.read_parquet(\"../datasets/LABEL_BTCUSDT/\")\n",
     "labels.drop(columns=\"SYMBOL\", inplace=True)\n",
-    "training_data.index = pd.to_datetime(training_data.index, unit='ms')\n",
-    "full_data = training_data.join(labels, how='left')\n",
-    "labels.index = pd.to_datetime(labels.index, unit='ms')"
+    "training_data.index = pd.to_datetime(training_data.index, unit=\"ms\")\n",
+    "full_data = training_data.join(labels, how=\"left\")\n",
+    "labels.index = pd.to_datetime(labels.index, unit=\"ms\")"
    ]
   },
   {
