--- a/Python/code-tour-test.ipynb
+++ b/Python/code-tour-test.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 40\u001b[0m\n\u001b[0;32m     38\u001b[0m move \u001b[39m=\u001b[39m {\u001b[39m1\u001b[39mj: \u001b[39m0\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39mj: \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m: \u001b[39m1\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m: \u001b[39m3\u001b[39m}\n\u001b[0;32m     39\u001b[0m \u001b[39mdir\u001b[39m \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mN\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mE\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mW\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m---> 40\u001b[0m dif[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m angle[s[\u001b[39m0\u001b[39;49m]]\n\u001b[0;32m     41\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, n):\n\u001b[0;32m     42\u001b[0m     dif[i] \u001b[39m=\u001b[39m angle[s[i]] \u001b[39m-\u001b[39m angle[s[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]]\n",
+      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.stdin = open('test.inp', 'r')\n",
@@ -87,9 +99,9 @@
     "#         i) % 4] - angle_to_complex[fwt.get(i-1) % 4]\n",
     "# sio[0] = angle_to_complex[fwt.get(0) % 4]\n",
     "# print(sio)\n",
-    "for i in range(1, n):\n",
-    "    print(fwt.get(\n",
-    "        i) - fwt.get(i-1), end=' ')\n",
+    "# for i in range(1, n):\n",
+    "#     print(fwt.get(\n",
+    "#         i) - fwt.get(i-1), end=' ')\n",
     "# lui = 0\n",
     "# for i, num in enumerate(sio):\n",
     "#     lui += num * (n-i)\n",
@@ -218,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
